# casmc

./: .clang-format  .config.mk  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT.txt  Cargo.toml  Doxyfile  Jenkinsfile  LICENSE.txt  Makefile  README.md  README.org  out.dot
.cmake/: LibPackage.cmake  config.mk
etc/: CMakeLists.txt
etc/benchmark/: CMakeLists.txt  main.cpp
etc/test/: CMakeLists.txt  main.cpp  main.h
src/: AstDumpPass.cpp  AstDumpPass.h  AstInterface.h  AstToCasmIRPass.cpp  AstToCasmIRPass.h  CMakeLists.txt  CasmIRToLLCodePass.cpp  CasmIRToLLCodePass.h  DataType.h  Pass.h  PassAstToCasmIR.cpp  PassAstToCasmIR.h  PassInfo.h  PassManager.cpp  PassManager.h  PassRegistry.h  PassResult.h  SourceToAstPass.cpp  SourceToAstPass.h  Type.cpp  Type.h  TypeCheckPass.cpp  TypeCheckPass.h  Version.in  Version.in.h  casmc.cpp  lib.rs  main.cpp
src/ir/: Type.cpp  Type.h  Value.cpp  Value.h
src/pass/: DataType.cpp  DataType.h  Pass.h  PassInfo.h  PassManager.h  PassRegistry.h  PassResult.h  PassUsage.h  Type.h
uts/: example.cpp
uts/subject/: example.cpp
var/example/: bit.casm  bla.casm  call.casm  filter.casm  filter_ma2.casm  filter_ma2_c3.casm  filter_ma2_long.casm  filter_ma2_once.casm  foo.casm  issue.casm  let.casm  simple.casm  syntax.casm  test.casm  test2.casm  test3.casm  test4.casm  test5.casm  test6.casm  test7.casm
